Add GitHub Actions workflow for Selenium tests

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -28,6 +28,9 @@ jobs:
       run: |
         pytest --html=report.html
 
+    - name: List files after tests
+      run: dir
+
     - name: Upload HTML report
       uses: actions/upload-artifact@v3
       with:
